fix page header text wrap down on smaller screen

--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -12,6 +12,18 @@
         display: flex;
         justify-content: space-between;
 
+        h2 {
+          padding-top: 4px;
+          min-width: 70vw;
+          // white-space: nowrap;
+          // overflow: hidden;
+          // text-overflow: ellipsis;
+          @media screen and (max-width: 359px){
+            font-size: x-large;
+            margin-bottom: 1rem;
+          }
+        }
+
         .dropdown-toggle::after {
           display: none;
         }
