--- a/client/src/pages/Machine/Machine.scss
+++ b/client/src/pages/Machine/Machine.scss
@@ -15,9 +15,13 @@
         h2 {
           padding-top: 4px;
           min-width: 70vw;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
+          // white-space: nowrap;
+          // overflow: hidden;
+          // text-overflow: ellipsis;
+          @media screen and (max-width: 359px){
+            font-size: x-large;
+            margin-bottom: 1rem;
+          }
         }
 
         .dropdown-toggle::after {
